--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -73,6 +73,10 @@
     <div id="message">Click on a cell!</div>
     <button id="resetButton" onclick="resetGame()">Reset Game</button>
 
+    <!-- Added Input Section -->
+    <input type="text" id="myFirstName" value="Aden" onblur="document.getElementById('coordinates').innerHTML = 'onBlur'"><br><br>
+    <input type="button" value="Show on Page" onclick="document.getElementById('message').innerHTML = 'Hey!'"><br><br>
+
     <script>
         let rows = 8;
         let cols = 8;
