--- a/public/index.html
+++ b/public/index.html
@@ -75,6 +75,7 @@ Aden
           <li><a href="t1a14-objects-arrays-Aden.html">t1a14-objects-arrays-Aden.html</a></li> 
          <li><a href="t1a15-events-aden.html">t1a15-events-aden.html</a></li> 
        <li><a href="t1a16-multi-d-arrays-Aden.html">t1a16-multi-d-arrays-Aden.html</a></li> 
+       <li><a href="t1a17-move-Aden.html">t1a17-move-Aden.html</a></li>
     </ul>
 
     <h2>X Assignments</h2>
