--- a/public/t1a15-events-aden.html
+++ b/public/t1a15-events-aden.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>t1a15-events-aden.html</title>
+    <title>Minesweeper Game</title>
     <style>
         body {
             height: 100vh;
@@ -72,6 +72,10 @@
     <div id="minefield"></div>
     <div id="message">Click on a cell!</div>
     <button id="resetButton" onclick="resetGame()">Reset Game</button>
+
+    <!-- Added Input Section -->
+    <input type="text" id="myFirstName" value="Aden" onblur="document.getElementById('coordinates').innerHTML = 'onBlur'"><br><br>
+    <input type="button" value="Show on Page" onclick="document.getElementById('message').innerHTML = 'Hey!'"><br><br>
 
     <script>
         let rows = 8;
