--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -1,212 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Minesweeper Game</title>
-    <style>
-        body {
-            height: 100vh;
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: center;
-            background-color: #f0f0f0;
-        }
-        #coordinates, #buttonLocation {
-            margin: 10px;
-            padding: 10px;
-            border: 1px solid #333;
-            width: 200px;
-            text-align: center;
-        }
-        #moveableButton {
-            position: absolute;
-            opacity: 0; /* Make the button initially invisible */
-            transition: opacity 0.3s; /* Smooth transition */
-        }
-        #moveableButton:hover {
-            opacity: 1; /* Show the button on hover */
-        }
-        #minefield {
-            display: grid;
-            grid-template-columns: repeat(8, 40px);
-            grid-gap: 2px;
-            margin-top: 20px;
-        }
-        .cell {
-            width: 40px;
-            height: 40px;
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            background-color: #ccc;
-            cursor: pointer;
-        }
-        .mine {
-            background-color: red;
-        }
-        .revealed {
-            background-color: #fff;
-        }
-        #message {
-            margin-top: 20px;
-            font-weight: bold;
-            color: green;
-        }
-        #resetButton {
-            margin-top: 20px;
-            padding: 10px 20px;
-            display: none; /* Initially hidden */
-        }
-    </style>
-</head>
-<body onmousemove="document.getElementById('coordinates').innerHTML = 'x: ' + event.clientX + ', y: ' + event.clientY" 
-      onkeydown="document.getElementById('coordinates').innerHTML = 'key: ' + event.key">
+<h1 align=center>t1a17-move-Aden</h1>
 
-    <div id="coordinates">...</div>
-    <div id="buttonLocation">Button Coordinates: <span id="buttonCoords">x: 0, y: 0</span></div>
-    
-    <button id="moveableButton" onclick="moveButton()">Move Me!</button>
 
-    <div id="minefield"></div>
-    <div id="message">Click on a cell!</div>
-    <button id="resetButton" onclick="resetGame()">Reset Game</button>
+<script>
 
-    <!-- Added Input Section -->
-    <input type="text" id="myFirstName" value="Aden" onblur="document.getElementById('coordinates').innerHTML = 'onBlur'"><br><br>
-    <input type="button" value="Show on Page" onclick="document.getElementById('message').innerHTML = 'Hey!'"><br><br>
+//global variables
+let myClock02
 
-    <script>
-        let rows = 8;
-        let cols = 8;
-        let mineCount = 10;
-        let minefield = [];
-        let revealedCells = 0;
-        let gameOver = false;
+</script>
 
-        function createMinefield() {
-            // Create a grid with empty cells
-            minefield = Array.from({ length: rows }, () => Array(cols).fill(0));
-            revealedCells = 0;
-            gameOver = false;
 
-            // Place mines
-            let minesPlaced = 0;
-            while (minesPlaced < mineCount) {
-                const r = Math.floor(Math.random() * rows);
-                const c = Math.floor(Math.random() * cols);
-                if (minefield[r][c] === 0) { // If no mine is already placed
-                    minefield[r][c] = 'X';
-                    minesPlaced++;
-                }
-            }
+<input type =button id="myButton02" value="Image Right" onclick="{
+ document.getElementById('myImage01').style.left = 
+ parseInt(document.getElementById('myImage01').style.left) + 10 + 'px'
+ }"><br><br> 
 
-            // Calculate numbers for cells around mines
-            for (let r = 0; r < rows; r++) {
-                for (let c = 0; c < cols; c++) {
-                    if (minefield[r][c] === 'X') {
-                        for (let i = r - 1; i <= r + 1; i++) {
-                            for (let j = c - 1; j <= c + 1; j++) {
-                                if (i >= 0 && i < rows && j >= 0 && j < cols && minefield[i][j] !== 'X') {
-                                    minefield[i][j]++;
-                                }
-                            }
-                        }
-                    }
-                }
-            }
-            renderMinefield();
-        }
+ <input type=button value="Auto Move Right" onclick="{
+   document.getElementById('myImage01').style.left = 0
+   clearInterval(myClock02)
+   myClock02 = setInterval(function(){
+    document.getElementById('myButton02').click()
+   }, 30)  // activate click every 30 ms (milliseconds)
+   }"><br><br> 
 
-        function renderMinefield() {
-            const minefieldElement = document.getElementById('minefield');
-            minefieldElement.innerHTML = ''; // Clear previous minefield
-            for (let r = 0; r < rows; r++) {
-                for (let c = 0; c < cols; c++) {
-                    const cell = document.createElement('div');
-                    cell.classList.add('cell');
-                    cell.dataset.row = r;
-                    cell.dataset.col = c;
-                    cell.addEventListener('click', revealCell);
-                    minefieldElement.appendChild(cell);
-                }
-            }
-        }
+<input type =button id="myButton02" value="Image Left" onclick="{
+ document.getElementById('myImage01').style.Right = 
+ parseInt(document.getElementById('myImage01').style.Right) + 10 + 'px'
+ }"><br><br> 
 
-        function revealCell(event) {
-            if (gameOver) return; // Prevent further clicks after game over
+ <input type=button value="Auto Move Left" onclick="{
+   document.getElementById('myImage01').style.Right = 0
+   clearInterval(myClock02)
+   myClock02 = setInterval(function(){
+    document.getElementById('myButton02').click()
+   }, 30)  // activate click every 30 ms (milliseconds)
+   }"><br><br> 
 
-            const row = event.target.dataset.row;
-            const col = event.target.dataset.col;
 
-            if (minefield[row][col] === 'X') {
-                displayMessage("Game Over! You hit a mine!");
-                revealAllCells();
-                showResetButton();
-                gameOver = true;
-                return;
-            }
 
-            event.target.innerText = minefield[row][col] || '';
-            event.target.classList.add('revealed');
-            revealedCells++;
 
-            if (revealedCells === (rows * cols - mineCount)) {
-                displayMessage("Congratulations! You've cleared the minefield!");
-                showResetButton();
-                gameOver = true;
-            }
-        }
 
-        function revealAllCells() {
-            const cells = document.querySelectorAll('.cell');
-            cells.forEach(cell => {
-                const row = cell.dataset.row;
-                const col = cell.dataset.col;
-                if (minefield[row][col] === 'X') {
-                    cell.innerText = 'X';
-                    cell.classList.add('mine');
-                } else {
-                    cell.innerText = minefield[row][col] || '';
-                }
-                cell.classList.add('revealed');
-            });
-        }
 
-        function moveButton() {
-            const button = document.getElementById('moveableButton');
-            const x = Math.random() * (window.innerWidth - 100); // 100 is the button width to keep it in view
-            const y = Math.random() * (window.innerHeight - 150); // 150 is the button height to keep it in view
 
-            button.style.left = x + 'px';
-            button.style.top = y + 'px';
 
-            // Update button coordinates
-            document.getElementById('buttonCoords').innerHTML = 'x: ' + Math.round(x) + ', y: ' + Math.round(y);
-        }
 
-        function displayMessage(msg) {
-            const messageDiv = document.getElementById('message');
-            messageDiv.innerText = msg;
-        }
-
-        function showResetButton() {
-            document.getElementById('resetButton').style.display = 'block'; // Show the reset button
-        }
-
-        function resetGame() {
-            // Hide the reset button, reset message and create a new minefield
-            document.getElementById('resetButton').style.display = 'none';
-            displayMessage("Click on a cell!");
-            createMinefield();
-        }
-
-        // Initialize the minefield on page load
-        createMinefield();
-
-        // Initial position of the button
-        moveButton();
-    </script>
-</body>
-</html>
+   <img id="myImage01" style="position:relative; width:100px; height:80px; top:0px;
+     left:0px;" src="https://www.cartoonpics.net/data/media/14/batman_cartoon_style.jpg">
