--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -1,80 +1,143 @@
-<h1 align=center>t1a17-move-Aden</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Fancy Move Application</title>
+    <style>
+        body {
+            background-color: #f0f0f0;
+            font-family: Arial, sans-serif;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        h1 {
+            color: #333;
+            margin-bottom: 20px;
+        }
+
+        .button-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            margin-bottom: 20px;
+        }
+
+        input[type="button"] {
+            background-color: #007BFF;
+            color: white;
+            border: none;
+            border-radius: 5px;
+            padding: 10px 15px;
+            margin: 5px;
+            cursor: pointer;
+            transition: background-color 0.3s ease;
+        }
+
+        input[type="button"]:hover {
+            background-color: #0056b3;
+        }
+
+        #myImage01 {
+            position: relative;
+            width: 100px;
+            height: 80px;
+            top: 0px;
+            left: 0px;
+            border: 2px solid #007BFF;
+            border-radius: 5px;
+        }
+    </style>
+</head>
+<body>
+
+<h1>t1a17-move-Aden</h1>
 
 <script>
-// Global variable for automatic movement
-let myClock02;
+    let myClock02;
 
-// Function to move the image
-function moveImage(x, y) {
-    var img = document.getElementById('myImage01');
-    img.style.left = (parseInt(img.style.left) + x) + 'px';
-    img.style.top = (parseInt(img.style.top) + y) + 'px';
-}
+    function moveImage(x, y) {
+        var img = document.getElementById('myImage01');
+        img.style.left = (parseInt(img.style.left) + x) + 'px';
+        img.style.top = (parseInt(img.style.top) + y) + 'px';
+    }
 
-function stopAutoMove() {
-    clearInterval(myClock02);
-}
+    function stopAutoMove() {
+        clearInterval(myClock02);
+    }
 
-function autoMove(direction) {
-    stopAutoMove();  // Clear any previous intervals
-    const moveAmount = 10;  // Pixels to move each interval
-    myClock02 = setInterval(function() {
-        switch(direction) {
-            case 'right':
-                moveImage(moveAmount, 0);
-                break;
-            case 'left':
-                moveImage(-moveAmount, 0);
-                break;
-            case 'up':
-                moveImage(0, -moveAmount);
-                break;
-            case 'down':
-                moveImage(0, moveAmount);
-                break;
-            case 'up-left':
-                moveImage(-moveAmount, -moveAmount);
-                break;
-            case 'up-right':
-                moveImage(moveAmount, -moveAmount);
-                break;
-            case 'down-left':
-                moveImage(-moveAmount, moveAmount);
-                break;
-            case 'down-right':
-                moveImage(moveAmount, moveAmount);
-                break;
-        }
-    }, 30);  // Activate click every 30 ms
-}
+    function autoMove(direction) {
+        stopAutoMove();  // Clear any previous intervals
+        const moveAmount = 10;  // Pixels to move each interval
+        myClock02 = setInterval(function() {
+            switch(direction) {
+                case 'right':
+                    moveImage(moveAmount, 0);
+                    break;
+                case 'left':
+                    moveImage(-moveAmount, 0);
+                    break;
+                case 'up':
+                    moveImage(0, -moveAmount);
+                    break;
+                case 'down':
+                    moveImage(0, moveAmount);
+                    break;
+                case 'up-left':
+                    moveImage(-moveAmount, -moveAmount);
+                    break;
+                case 'up-right':
+                    moveImage(moveAmount, -moveAmount);
+                    break;
+                case 'down-left':
+                    moveImage(-moveAmount, moveAmount);
+                    break;
+                case 'down-right':
+                    moveImage(moveAmount, moveAmount);
+                    break;
+            }
+        }, 30);  // Activate click every 30 ms
+    }
 </script>
 
-<!-- Buttons for moving the image in different directions -->
-<input type="button" id="myButtonLeft" value="Image Left" onclick="moveImage(-10, 0)">
-<input type="button" id="myButtonRight" value="Image Right" onclick="moveImage(10, 0)">
-<input type="button" id="myButtonUp" value="Image Up" onclick="moveImage(0, -10)">
-<input type="button" id="myButtonDown" value="Image Down" onclick="moveImage(0, 10)"><br><br>
+<div class="button-container">
+    <input type="button" value="Image Left" onclick="moveImage(-10, 0)">
+    <input type="button" value="Image Right" onclick="moveImage(10, 0)">
+    <input type="button" value="Image Up" onclick="moveImage(0, -10)">
+    <input type="button" value="Image Down" onclick="moveImage(0, 10)">
+</div>
 
-<!-- Diagonal Move Buttons -->
-<input type="button" value="Image Up-Left" onclick="moveImage(-10, -10)">
-<input type="button" value="Image Up-Right" onclick="moveImage(10, -10)">
-<input type="button" value="Image Down-Left" onclick="moveImage(-10, 10)">
-<input type="button" value="Image Down-Right" onclick="moveImage(10, 10)"><br><br>
+<div class="button-container">
+    <input type="button" value="Image Up-Left" onclick="moveImage(-10, -10)">
+    <input type="button" value="Image Up-Right" onclick="moveImage(10, -10)">
+    <input type="button" value="Image Down-Left" onclick="moveImage(-10, 10)">
+    <input type="button" value="Image Down-Right" onclick="moveImage(10, 10)">
+</div>
 
-<!-- Auto Move buttons -->
-<input type="button" value="Auto Move Left" onclick="autoMove('left')">
-<input type="button" value="Auto Move Right" onclick="autoMove('right')">
-<input type="button" value="Auto Move Up" onclick="autoMove('up')">
-<input type="button" value="Auto Move Down" onclick="autoMove('down')"><br><br>
+<div class="button-container">
+    <input type="button" value="Auto Move Left" onclick="autoMove('left')">
+    <input type="button" value="Auto Move Right" onclick="autoMove('right')">
+    <input type="button" value="Auto Move Up" onclick="autoMove('up')">
+    <input type="button" value="Auto Move Down" onclick="autoMove('down')">
+</div>
 
-<!-- Diagonal Auto Move Buttons -->
-<input type="button" value="Auto Move Up-Left" onclick="autoMove('up-left')">
-<input type="button" value="Auto Move Up-Right" onclick="autoMove('up-right')">
-<input type="button" value="Auto Move Down-Left" onclick="autoMove('down-left')">
-<input type="button" value="Auto Move Down-Right" onclick="autoMove('down-right')"><br><br>
+<div class="button-container">
+    <input type="button" value="Auto Move Up-Left" onclick="autoMove('up-left')">
+    <input type="button" value="Auto Move Up-Right" onclick="autoMove('up-right')">
+    <input type="button" value="Auto Move Down-Left" onclick="autoMove('down-left')">
+    <input type="button" value="Auto Move Down-Right" onclick="autoMove('down-right')">
+</div>
 
-<!-- Stop Auto Move button -->
-<input type="button" value="Stop Auto Move" onclick="stopAutoMove()"><br><br>
+<div class="button-container">
+    <input type="button" value="Stop Auto Move" onclick="stopAutoMove()">
+</div>
 
-<!-- Image to move -->
-<img id="myImage01" style="position:relative; width:100px; height:80px; top:0px; left:0px;" src="https://www.cartoonpics.net/data/media/14/batman_cartoon_style.jpg">
+<img id="myImage01" src="https://www.cartoonpics.net/data/media/14/batman_cartoon_style.jpg">
+
+</body>
+</html>
