--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -3,11 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fancy Move Application</title>
+    <title>Image Movement</title>
     <style>
         body {
-            background-color: #f0f0f0;
-            font-family: Arial, sans-serif;
+            background-color: #282c34;
+            color: white;
+            font-family: 'Arial', sans-serif;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -15,129 +16,142 @@
             height: 100vh;
             margin: 0;
         }
-
         h1 {
-            color: #333;
+            font-size: 2.5em;
             margin-bottom: 20px;
+            color: #61dafb;
         }
-
-        .button-container {
-            display: flex;
-            flex-wrap: wrap;
-            justify-content: center;
-            margin-bottom: 20px;
-        }
-
         input[type="button"] {
-            background-color: #007BFF;
-            color: white;
+            background-color: #61dafb;
             border: none;
             border-radius: 5px;
-            padding: 10px 15px;
+            color: black;
+            padding: 15px 25px;
             margin: 5px;
+            font-size: 1em;
             cursor: pointer;
             transition: background-color 0.3s ease;
         }
-
         input[type="button"]:hover {
-            background-color: #0056b3;
+            background-color: #21a1f1;
         }
-
-        #myImage01 {
-            position: relative;
-            width: 100px;
-            height: 80px;
-            top: 0px;
-            left: 0px;
-            border: 2px solid #007BFF;
-            border-radius: 5px;
+        img {
+            margin-top: 20px;
+            border: 2px solid #61dafb;
+            border-radius: 10px;
+            transition: transform 0.3s ease;
+        }
+        img:hover {
+            transform: scale(1.05);
+        }
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+        }
+        .button-row {
+            display: flex;
+            justify-content: center;
         }
     </style>
 </head>
 <body>
 
-<h1>t1a17-move-Aden</h1>
+<h1 align="center">t1a17-move-Aden</h1>
 
 <script>
-    let myClock02;
+// Global variable for automatic movement
+let myClock02;
 
-    function moveImage(x, y) {
-        var img = document.getElementById('myImage01');
-        img.style.left = (parseInt(img.style.left) + x) + 'px';
-        img.style.top = (parseInt(img.style.top) + y) + 'px';
-    }
+// Function to move the image
+function moveImage(x, y) {
+    var img = document.getElementById('myImage01');
+    img.style.left = (parseInt(img.style.left) + x) + 'px';
+    img.style.top = (parseInt(img.style.top) + y) + 'px';
+}
 
-    function stopAutoMove() {
-        clearInterval(myClock02);
-    }
+function stopAutoMove() {
+    clearInterval(myClock02);
+}
 
-    function autoMove(direction) {
-        stopAutoMove();  // Clear any previous intervals
-        const moveAmount = 10;  // Pixels to move each interval
-        myClock02 = setInterval(function() {
-            switch(direction) {
-                case 'right':
-                    moveImage(moveAmount, 0);
-                    break;
-                case 'left':
-                    moveImage(-moveAmount, 0);
-                    break;
-                case 'up':
-                    moveImage(0, -moveAmount);
-                    break;
-                case 'down':
-                    moveImage(0, moveAmount);
-                    break;
-                case 'up-left':
-                    moveImage(-moveAmount, -moveAmount);
-                    break;
-                case 'up-right':
-                    moveImage(moveAmount, -moveAmount);
-                    break;
-                case 'down-left':
-                    moveImage(-moveAmount, moveAmount);
-                    break;
-                case 'down-right':
-                    moveImage(moveAmount, moveAmount);
-                    break;
-            }
-        }, 30);  // Activate click every 30 ms
-    }
+function autoMove(direction) {
+    stopAutoMove();  // Clear any previous intervals
+    const moveAmount = 10; // Pixels to move each interval
+    myClock02 = setInterval(function() {
+        switch(direction) {
+            case 'right':
+                moveImage(moveAmount, 0);
+                break;
+            case 'left':
+                moveImage(-moveAmount, 0);
+                break;
+            case 'up':
+                moveImage(0, -moveAmount);
+                break;
+            case 'down':
+                moveImage(0, moveAmount);
+                break;
+            case 'up-left':
+                moveImage(-moveAmount, -moveAmount);
+                break;
+            case 'up-right':
+                moveImage(moveAmount, -moveAmount);
+                break;
+            case 'down-left':
+                moveImage(-moveAmount, moveAmount);
+                break;
+            case 'down-right':
+                moveImage(moveAmount, moveAmount);
+                break;
+        }
+    }, 30);  // Activate click every 30 ms
+}
 </script>
 
 <div class="button-container">
-    <input type="button" value="Image Left" onclick="moveImage(-10, 0)">
-    <input type="button" value="Image Right" onclick="moveImage(10, 0)">
-    <input type="button" value="Image Up" onclick="moveImage(0, -10)">
-    <input type="button" value="Image Down" onclick="moveImage(0, 10)">
+
+    <div class="button-row">
+        <input type="button" id="myButtonLeft" value="Left" onclick="moveImage(-10, 0)">
+        <input type="button" id="myButtonRight" value="Right" onclick="moveImage(10, 0)">
+    </div>
+    <div class="button-row">
+        <input type="button" id="myButtonUp" value="Up" onclick="moveImage(0, -10)">
+        <input type="button" id="myButtonDown" value="Down" onclick="moveImage(0, 10)">
+    </div>
+
+    <div class="button-row">
+        <input type="button" value="Up-Left" onclick="moveImage(-10, -10)">
+        <input type="button" value="Up-Right" onclick="moveImage(10, -10)">
+    </div>
+    <div class="button-row">
+        <input type="button" value="Down-Left" onclick="moveImage(-10, 10)">
+        <input type="button" value="Down-Right" onclick="moveImage(10, 10)">
+    </div>
+
+    <div class="button-row">
+        <input type="button" value="Auto Left" onclick="autoMove('left')">
+        <input type="button" value="Auto Right" onclick="autoMove('right')">
+    </div>
+    <div class="button-row">
+        <input type="button" value="Auto Up" onclick="autoMove('up')">
+        <input type="button" value="Auto Down" onclick="autoMove('down')">
+    </div>
+
+    <div class="button-row">
+        <input type="button" value="Auto Up-Left" onclick="autoMove('up-left')">
+        <input type="button" value="Auto Up-Right" onclick="autoMove('up-right')">
+    </div>
+    <div class="button-row">
+        <input type="button" value="Auto Down-Left" onclick="autoMove('down-left')">
+        <input type="button" value="Auto Down-Right" onclick="autoMove('down-right')">
+    </div>
+
+    <input type="button" value="Stop Auto Move" onclick="stopAutoMove()"><br><br>
+
 </div>
 
-<div class="button-container">
-    <input type="button" value="Image Up-Left" onclick="moveImage(-10, -10)">
-    <input type="button" value="Image Up-Right" onclick="moveImage(10, -10)">
-    <input type="button" value="Image Down-Left" onclick="moveImage(-10, 10)">
-    <input type="button" value="Image Down-Right" onclick="moveImage(10, 10)">
-</div>
-
-<div class="button-container">
-    <input type="button" value="Auto Move Left" onclick="autoMove('left')">
-    <input type="button" value="Auto Move Right" onclick="autoMove('right')">
-    <input type="button" value="Auto Move Up" onclick="autoMove('up')">
-    <input type="button" value="Auto Move Down" onclick="autoMove('down')">
-</div>
-
-<div class="button-container">
-    <input type="button" value="Auto Move Up-Left" onclick="autoMove('up-left')">
-    <input type="button" value="Auto Move Up-Right" onclick="autoMove('up-right')">
-    <input type="button" value="Auto Move Down-Left" onclick="autoMove('down-left')">
-    <input type="button" value="Auto Move Down-Right" onclick="autoMove('down-right')">
-</div>
-
-<div class="button-container">
-    <input type="button" value="Stop Auto Move" onclick="stopAutoMove()">
-</div>
-
-<img id="myImage01" src="https://www.cartoonpics.net/data/media/14/batman_cartoon_style.jpg">
+<!-- Image to move -->
+<img id="myImage01" style="position:relative; width:100px; height:80px; top:0px; left:0px;" src="https://www.cartoonpics.net/data/media/14/batman_cartoon_style.jpg">
 
 </body>
 </html>
