--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Image Movement</title>
+    <title>t1a17-move-Aden</title>
     <style>
         body {
             background-color: #282c34;
@@ -66,21 +66,8 @@ let myClock02;
 // Function to move the image
 function moveImage(x, y) {
     var img = document.getElementById('myImage01');
-    var imgRect = img.getBoundingClientRect();
-    var newLeft = parseInt(img.style.left) + x;
-    var newTop = parseInt(img.style.top) + y;
-
-    // Get the viewport dimensions
-    var viewportWidth = window.innerWidth;
-    var viewportHeight = window.innerHeight;
-
-    // Prevent moving off-screen
-    if (newLeft >= 0 && newLeft + imgRect.width <= viewportWidth) {
-        img.style.left = newLeft + 'px';
-    }
-    if (newTop >= 0 && newTop + imgRect.height <= viewportHeight) {
-        img.style.top = newTop + 'px';
-    }
+    img.style.left = (parseInt(img.style.left) + x) + 'px';
+    img.style.top = (parseInt(img.style.top) + y) + 'px';
 }
 
 function stopAutoMove() {
