--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,7 @@ Aden
          <li><a href="t1a15-events-aden.html">t1a15-events-aden.html</a></li> 
        <li><a href="t1a16-multi-d-arrays-Aden.html">t1a16-multi-d-arrays-Aden.html</a></li> 
        <li><a href="t1a17-move-Aden.html">t1a17-move-Aden.html</a></li>
+        <li><a href="t1a18-classes-Aden.html">t1a18-classes-Aden.html</a></li>
     </ul>
 
     <h2>X Assignments</h2>
