--- a/public/t1a18-classes-Aden.html
+++ b/public/t1a18-classes-Aden.html
@@ -1,35 +1,41 @@
-<h2 align=center>t1a18-extend-class-by-fred.html</h2>
-< script>
-class myAnimal {
-constructor (passName, passAge) {
-this.myName = passName;
-this.myAge = passAge;
-}
-myShow() {
-document.getElementById( 'myDiv01'). innerHTML = 'Hello '+ this myName+' <br>'
-♪
-1/
-end class myAnimal
-class myCat extends myAnimal {
-  myShow(){
-    document.getElementById ('myDivo1'). innerHTML = this. myName + ' is a great
-}
-cat<br>'
-｝
-// end
-extended class myCat
-</script>
-‹input type=button value="Example Class Set and Show Class Animal" onClick="{
-myDog = new myAnimal ('Snickers', 5)
-myDog - myShow()
-｝"><bry<br>
-‹input type=text id="myText01" value="may be useful later"><br›
-<input type=button value="Example Extend Class Animal as Cat" onClick="{
-End
-2
-↓
-Insert
-myPet = new myCat( 'Fluffy', 14)
-myPet. myShow()
-ぶ"><bry<br>
-‹div id="myDiv01">... ‹/div>
+<html>
+<head>
+    <link rel="stylesheet" type="text/css" href="css-ardan.css">
+</head>
+
+<body>
+    <h2 align="center">t1a18 extend class ardan.html</h2>
+
+    <script>
+        class MyAnimal {
+            constructor(passName, passAge) {
+                this.myName = passName;
+                this.myAge = passAge;
+            }
+            myShow() {
+                document.getElementById('myDiv01').innerHTML = 'Hello ' + this.myName + '<br>';
+            }
+        } // end class MyAnimal
+
+        class MyCat extends MyAnimal {
+            myShow() {
+                document.getElementById('myDiv01').innerHTML = this.myName + ' is a great cat <br>';
+            }
+        } // end extended class MyCat
+    </script>
+
+    <input type="button" value="Example Class Set and Show Class Animal" onClick="{
+        myDog = new MyAnimal('Snickers', 5);
+        myDog.myShow();
+    }"><br><br>
+
+    <input type="text" id="myText01" value="may be useful later"><br>
+
+    <input type="button" value="Example Extend Class Animal as Cat" onClick="{
+        myPet = new MyCat('Fluffy', 14);
+        myPet.myShow();
+    }"><br><br>
+
+    <div id="myDiv01">...</div>
+</body>
+</html>
