--- a/public/t1a18-classes-Aden.html
+++ b/public/t1a18-classes-Aden.html
@@ -4,7 +4,7 @@
 </head>
 
 <body>
-    <h2 align="center">t1a18 extend class ardan.html</h2>
+    <h2 align="center">t1a18 extend class Aden.html</h2>
 
     <script>
         class MyAnimal {
