--- a/public/Testing-page.html
+++ b/public/Testing-page.html
@@ -7,6 +7,7 @@
     <h2 align="center">t1a18 extend class Aden.html</h2>
 
     <script>
+        // Base Class for Animals
         class MyAnimal {
             constructor(passName, passAge) {
                 this.myName = passName;
@@ -17,13 +18,48 @@
             }
         } // end class MyAnimal
 
+        // Extended Class for Cats
         class MyCat extends MyAnimal {
             myShow() {
                 document.getElementById('myDiv01').innerHTML = this.myName + ' is a great cat <br>';
             }
         } // end extended class MyCat
+
+        // New Class for Cars
+        class MyCar {
+            constructor(brand, model) {
+                this.brand = brand;
+                this.model = model;
+            }
+            myShow() {
+                document.getElementById('myDiv02').innerHTML = 'Car: ' + this.brand + ' ' + this.model + '<br>';
+            }
+        } // end class MyCar
+
+        // New Class for Books
+        class MyBook {
+            constructor(title, author) {
+                this.title = title;
+                this.author = author;
+            }
+            myShow() {
+                document.getElementById('myDiv03').innerHTML = 'Book: "' + this.title + '" by ' + this.author + '<br>';
+            }
+        } // end class MyBook
+
+        // New Class for Persons
+        class MyPerson {
+            constructor(name, age) {
+                this.name = name;
+                this.age = age;
+            }
+            myShow() {
+                document.getElementById('myDiv04').innerHTML = 'Person: ' + this.name + ', Age: ' + this.age + '<br>';
+            }
+        } // end class MyPerson
     </script>
 
+    <!-- Button to show Animal -->
     <input type="button" value="Example Class Set and Show Class Animal" onClick="{
         myDog = new MyAnimal('Snickers', 5);
         myDog.myShow();
@@ -31,11 +67,33 @@
 
     <input type="text" id="myText01" value="may be useful later"><br>
 
+    <!-- Button to show Cat -->
     <input type="button" value="Example Extend Class Animal as Cat" onClick="{
         myPet = new MyCat('Fluffy', 14);
         myPet.myShow();
     }"><br><br>
 
+    <!-- Button to show Car -->
+    <input type="button" value="Show Car Info" onClick="{
+        myCar = new MyCar('Tesla', 'Model S');
+        myCar.myShow();
+    }"><br><br>
+
+    <!-- Button to show Book -->
+    <input type="button" value="Show Book Info" onClick="{
+        myBook = new MyBook('The Great Gatsby', 'F. Scott Fitzgerald');
+        myBook.myShow();
+    }"><br><br>
+
+    <!-- Button to show Person -->
+    <input type="button" value="Show Person Info" onClick="{
+        myPerson = new MyPerson('John Doe', 30);
+        myPerson.myShow();
+    }"><br><br>
+
     <div id="myDiv01">...</div>
+    <div id="myDiv02">...</div>
+    <div id="myDiv03">...</div>
+    <div id="myDiv04">...</div>
 </body>
 </html>
